--- a/.prettierrc
+++ b/.prettierrc
@@ -18,6 +18,6 @@
     "endOfLine": "lf",
     "embeddedLanguageFormatting": "auto",
     "singleAttributePerLine": false,
-    "plugins": []
+    "plugins": ["prettier-plugin-tailwindcss"]
   }
   
