--- a/.prettierrc
+++ b/.prettierrc
@@ -9,15 +9,13 @@
     "jsxSingleQuote": false,
     "trailingComma": "all",
     "bracketSpacing": true,
-    "bracketSameLine": false,
+    "bracketSameLine": true,
     "arrowParens": "always",
     "rangeStart": 0,
     "proseWrap": "preserve",
     "htmlWhitespaceSensitivity": "css",
-    "vueIndentScriptAndStyle": false,
     "endOfLine": "lf",
     "embeddedLanguageFormatting": "auto",
     "singleAttributePerLine": false,
     "plugins": ["prettier-plugin-tailwindcss"]
-  }
-  
+}
